--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,10 @@
   text-align: left;
   left: 40px;
 }
-
+.content{
+  padding:0 10%;
+  align-items: center;
+}
 .balloon {
   margin-top: 100px;
   margin-right: 50px;
@@ -11,45 +14,35 @@
   align-items: center;
   background-color: #BD8FFF;
   color: rgb(255, 255, 255);
-  /* margin-bottom: 1rem;  */
-  /* padding: 2rem 2rem;  */
   border-radius: 10px 90px;
   width:600px;
 	height:80px;
   
 }
 
+.article-letz{
+  margin: 2% 0;
+}
 .box-shadow{
   display: flex;
-
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   width:1120px;
-	height:500px;
-}
+  padding-bottom: 100px;
+  margin-bottom: 50px;
 
+}
 .left-margin{
   margin-left: 35px;
   margin-top:35px;
-  
-
 }
-
-.rodape {
+.linear-gradient {
   width:100%;
-  float:left;
   padding:1% 1%;
-  text-align: center;
   background-image: linear-gradient(to right, rgb(149, 179, 255), rgba(	189, 143, 255 ,1));
 }
-.header{
-  width:100%;
-  float:left;
-  padding:1% 1%;
-  text-align: center;
-  background-image: linear-gradient(to right, rgb(149, 179, 255), rgba(	189, 143, 255 ,1));
-}
-.rodape.fixed {
-  position: absolute;
+
+.fot-fix{
+  position: fixed;
   bottom: 0;
+  left:0;
 }
-
