Começo da integracao back-front

--- a/src/styles/userRoom.module.css
+++ b/src/styles/userRoom.module.css
@@ -101,7 +101,7 @@
   cursor: pointer;
 }
 .buttonUser::after{
-  content: url('../../public/luz.svg');
+  content: url('../../public/sol.svg');
   width: 35px;
   height: 35px;
   background-color: rgb(212, 0, 255);
