--- a/src/pages/components/userCard/userCard.module.css
+++ b/src/pages/components/userCard/userCard.module.css
@@ -90,3 +90,20 @@
     margin: -12px 0 0 -20px;
 }
   
+
+.clickedBackCardUser{
+  width: 110px;
+  height: 130px;
+  border: 2px solid hsl(281, 100%, 50%);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  box-shadow: 0 0 0.5em rgb(224, 135, 148);
+  background-color: #e667ff;
+  opacity: 0.8;
+  background-image: radial-gradient(circle at center center, #e145f7, #e667ff), repeating-radial-gradient(circle at center center, #e145f7, #e145f7, 10px, transparent 20px, transparent 10px);
+  background-blend-mode: multiply;
+  
+}
