--- a/src/pages/components/userCard/userCard.module.css
+++ b/src/pages/components/userCard/userCard.module.css
@@ -1,97 +1,103 @@
-.espaco3dUser{
-    /* text-align: center; */
-    width: 300px;
-    height: 200px;
-    perspective: 1000px;
-    display: inline;
-  
-  }
+.espaco3dUser {
+  /* text-align: center; */
+  width: 300px;
+  height: 200px;
+  perspective: 1000px;
+  display: inline;
 
-.titleUserCardUser{
-    /* display:block; */
-    margin-left: 60px;
-    background: rgb(118,128,153);
-    background: linear-gradient(90deg, rgba(118,128,153,1) 0%, rgba(243,184,255,1) 100%);
-    border-radius: 10px;
-    padding: 2px 10px;
-    width: 180px;
-    color:white;
-    text-shadow: 0 0 5px #000;
-    box-shadow: 0 0 1em rgba(46, 46, 46, 0.2);
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-.flipperUser{
-    position: relative;
-    width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-    transition: transform 0.8s;
-  }
+}
+
+.titleUserCardUser {
+  /* display:block; */
+  margin-left: 60px;
+  background: rgb(118, 128, 153);
+  background: linear-gradient(90deg, rgba(118, 128, 153, 1) 0%, rgba(243, 184, 255, 1) 100%);
+  border-radius: 10px;
+  padding: 2px 10px;
+  width: 180px;
+  color: white;
+  text-shadow: 0 0 5px #000;
+  box-shadow: 0 0 1em rgba(46, 46, 46, 0.2);
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.flipperUser {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.8s;
+}
+
 .flipperOpenUser {
-    transform: rotateY(180deg);
-  }
-  
-  /* apresentara o verso da carta, parte de tras */
+  transform: rotateY(180deg);
+}
+
+/* apresentara o verso da carta, parte de tras */
 .flipperClosedUser {
-    transform: rotateY(0deg);
-  }
-
-  
-.userCardDivUser{
-    text-align: center;
-    position: relative;
-    padding: 2px 100px;
+  transform: rotateY(0deg);
 }
 
-.BackCardUser{
-    width: 110px;
-    height: 130px;
-    border: 2px solid hsl(266, 100%, 90%);
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #B094FF;
-    background: repeating-linear-gradient( 45deg, #F0A6FF, #F0A6FF 5px, #B094FF 5px, #B094FF 25px );
+
+.userCardDivUser {
+  text-align: center;
+  position: relative;
+  padding: 2px 100px;
 }
-.versoCartaUser, .frenteCartaUser{
-    /* agora os dois estão na mesma posicao dentro de flipper com absolute */
-    position: absolute;
-      width: 100%;
-      height: 100%;
-    backface-visibility: hidden;
+
+.BackCardUser {
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.20);
+  width: 110px;
+  height: 130px;
+  border: 2px solid hsl(266, 100%, 90%);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #B094FF;
+  background: repeating-linear-gradient(45deg, #F0A6FF, #F0A6FF 5px, #B094FF 5px, #B094FF 25px);
 }
-  
-.frenteCartaUser{
-      transform: rotateY(180deg);
+
+.versoCartaUser,
+.frenteCartaUser {
+  /* agora os dois estão na mesma posicao dentro de flipper com absolute */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
 }
-  
+
+.frenteCartaUser {
+  transform: rotateY(180deg);
+}
+
 /* USER CARD */
-.userCardVoteUser{
-    width: 110px;
-    height: 130px;
-    border: 2px solid white;
-    background-color: #aba0bf;
-    border-radius: 20px;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
+.userCardVoteUser {
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.40);
+  width: 110px;
+  height: 130px;
+  border: 2px solid white;
+  background-color: #aba0bf;
+  border-radius: 20px;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
 }
-  
-.numberUserCardVoteUser{
-    color:white;
-    width: 50px;
-    height: 50px;
-    /* Centralizar na vertical e na horizontal */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -12px 0 0 -20px;
-}
-  
 
-.clickedBackCardUser{
+.numberUserCardVoteUser {
+  color: white;
+  width: 50px;
+  height: 50px;
+  /* Centralizar na vertical e na horizontal */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -12px 0 0 -20px;
+}
+
+
+.clickedBackCardUser {
   width: 110px;
   height: 130px;
   border: 2px solid hsl(281, 100%, 50%);
@@ -99,11 +105,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   box-shadow: 0 0 0.5em rgb(224, 135, 148);
   background-color: #e667ff;
   opacity: 0.8;
   background-image: radial-gradient(circle at center center, #e145f7, #e667ff), repeating-radial-gradient(circle at center center, #e145f7, #e145f7, 10px, transparent 20px, transparent 10px);
   background-blend-mode: multiply;
-  
+
 }
